# advent2019

day1/: README.md
day1/go/: Makefile  go.mod
day1/go/src/: lib.go  lib_test.go  main.go
day1/rust/: Cargo.toml  input
day1/rust/benches/: my_benchmark.rs
day1/rust/src/: lib.rs  main.rs
day2/: README.md
day2/go/: Makefile  day2
day2/go/src/: lib.go  lib_test.go  main.go
day2/rust/: Cargo.toml
day2/rust/benches/: my_benchmark.rs
day2/rust/src/: lib.rs  main.rs
day3/go/: Makefile  go.mod
day3/go/src/: lib.go  lib_test.go  main.go
day3/rust/: Cargo.toml
day3/rust/benches/: my_benchmark.rs
day3/rust/src/: lib.rs  main.rs
day4/: README.md
day4/go/: Makefile  go.mod
day4/go/src/: lib.go  lib_test.go  main.go
day4/rust/: Cargo.toml
day4/rust/benches/: my_benchmark.rs
day4/rust/src/: lib.rs  main.rs
day4/rust_async/: Cargo.toml
day4/rust_async/benches/: my_benchmark.rs
day4/rust_async/src/: lib.rs  main.rs
