[package]
name = "day4"
version = "0.1.0"
authors = ["Michael Mullin <masmullin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "day4_lib"
path = "src/lib.rs"

[[bin]]
name = "day4"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
itoa = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[features]
bench = []